--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "build": "./node_modules/.bin/babel src -d dist",
+    "build": "webpack",
     "start": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
